tests/fixtures/negative/006_invalid_lhs_assignment.js
// Expected error: invalid left-hand side in assignment
1 + 2 = 3;
